--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-native-background-timer": "^2.2.0",
     "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-get-random-values": "^1.3.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-webview": "^9.2.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0"
